# cube-timer

./: .gitignore  Cargo.toml  README.md
demos/: main.mov
src/: app.rs  handler.rs  lib.rs  main.rs  scramble.rs  timer.rs  times.rs  tui.rs  turns.rs  ui.rs
