[package]
name = "cube-timer"
version = "0.1.0"
authors = ["mcclainclain <matthew.mcclain08@icloud.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
crossterm = "0.26.1"
figfont = "0.1.1"
figlet-rs = "0.1.5"
rand = "0.8.5"
serde_json = "1.0.105"
tui = { package = "ratatui", version = "0.21.0" }
